--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://kit.fontawesome.com/e07450b1d6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -13,8 +14,9 @@
     </header>
     <main>
         <div>
-            <h2>Produtos</h2>
+            <h2>Produtos </h2>
             <span>Lista de produtos da minha loja.</span>
+            <i class="fa-thin fa-pen-to-square"></i>
         </div>
         <div class="card">
             <div class="line-input">
@@ -23,8 +25,8 @@
             </div>
 
             <div class="line-input">
-                <label id="price">Preço</label>
-                <input type="text" id="price" placeholder="Valor do produto">
+                <label for="price">Preço</label>
+                <input type="number" id="price" placeholder="Valor do produto">
             </div>
 
             <button onclick="produto.add()">Adicionar</button>
@@ -33,18 +35,16 @@
 
         </div>
 
-        <div>
+        <div class="content">
             <table>
                 <thead>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th class="center">ID</th>
+                    <th>Produto</th>
+                    <th>Valor</th>
+                    <th class="center">Ações</th>
 
                 </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                    </tr>
+                <tbody id="tbody">
                 </tbody>
             </table>
         </div>
