funcionalidade botão deletar

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
             <div class="line-input">
                 <label for="price">Preço</label>
-                <input type="number" id="price" placeholder="Valor do produto">
+                <input type="text" id="price" placeholder="Valor do produto">
             </div>
 
             <button onclick="produto.add()">Adicionar</button>
